[gd_scene load_steps=7 format=3 uid="uid://ddqw56avt1klp"]

[ext_resource type="Texture2D" uid="uid://c12w3387vafjg" path="res://icon.svg" id="1_506tx"]
[ext_resource type="Script" uid="uid://hrklt2c0ilro" path="res://Scenes/Weapons/small_mech_sword.gd" id="1_k1k81"]

[sub_resource type="Animation" id="Animation_1lma4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_k1k81"]
resource_name = "basic_swing"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, -0.785398, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmwik"]
_data = {
&"RESET": SubResource("Animation_1lma4"),
&"basic_swing": SubResource("Animation_k1k81")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k1k81"]
size = Vector2(110, 15)

[node name="SmallMechSword" type="Node2D" groups=["sword"]]
scale = Vector2(0.48612, 0.48612)
script = ExtResource("1_k1k81")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../SmallMechSword")
libraries = {
&"": SubResource("AnimationLibrary_qmwik")
}
autoplay = "basic_swing"

[node name="SmallMechSword" type="Area2D" parent="."]
scale = Vector2(0.508024, 0.0397777)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmallMechSword"]
position = Vector2(124.509, 10.3453)
scale = Vector2(1.2907, 13.7899)
shape = SubResource("RectangleShape2D_k1k81")

[node name="SwordSprite" type="Sprite2D" parent="SmallMechSword"]
modulate = Color(0.71099, 0.666628, 0.266704, 1)
texture = ExtResource("1_506tx")
offset = Vector2(120, 0)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="SmallMechSword" to="." method="_on_small_mech_sword_area_entered"]
[connection signal="body_entered" from="SmallMechSword" to="." method="_on_small_mech_sword_body_entered"]
